fix button not showing when text to large

--- a/public/css/styles-web.css
+++ b/public/css/styles-web.css
@@ -32,7 +32,11 @@ a,
     place-items: center;
     justify-content: center;
     background-color: var(--first-color);
-    background-image: linear-gradient(62deg, var(--first-color) 0%, #f84848 100%);
+    background-image: linear-gradient(
+        62deg,
+        var(--first-color) 0%,
+        #f84848 100%
+    );
     height: 70vh;
     width: 100%;
     overflow: hidden;
@@ -161,7 +165,7 @@ nav {
     height: 60px;
     background-color: var(--nav-color-web);
     color: var(--second-color);
-    box-shadow: 0px 3px 5px rgb(0, 0, 0, .5);
+    box-shadow: 0px 3px 5px rgb(0, 0, 0, 0.5);
     position: sticky;
     z-index: 100;
 }
@@ -374,7 +378,7 @@ a {
     white-space: pre-wrap;
     margin-bottom: 15px;
     display: -webkit-box;
-    -webkit-line-clamp: 9;
+    -webkit-line-clamp: 7;
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
@@ -823,7 +827,7 @@ a {
     margin: 0 20px;
 }
 
-.info.city .description h2{
+.info.city .description h2 {
     margin: 0 0 10px 0;
 }
 
@@ -1344,7 +1348,7 @@ a {
     .card-flex-district {
         width: 24%;
     }
-    
+
     .info.activity img,
     .info.place img,
     .info.gastronomy img,
